--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <title>Hoover Moover</title>
   </head>
   <body>
-    <canvas
-      class="canvas"
-      height="300"
-      width="300"
-      style="background-color:cadetblue"
-    ></canvas>
+    <div id="results"></div>
   </body>
   <script type="text/javascript" src="roomba.js"></script>
 </html>
